glx/testdata/invalid/missing-required-fields/repositories/repo-missing-name.glx
repositories:
  repo-missing-name:
    type: library


